--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-    background: #58249c;
+    background: grey;
     padding: 20px;
     color: #fff;
   }
@@ -13,6 +13,7 @@
     margin-right: auto;
     color: #fff;
     text-decoration: none;
+    font: 30px;
   }
   .navbar a:last-child {
     color: #fff;
@@ -25,4 +26,27 @@
   .navbar a:last-child:hover {
     background: #fff;
     color: #333;
+  }
+
+
+  /*  */
+  .navbar ul {
+    display: flex;
+    margin: 0 auto;
+    max-width: 960px;
+    align-items: center;
+    list-style-type: none
+  }
+  .title {
+    margin-right: auto;
+    font-weight: bold;
+    letter-spacing: 1px;
+    font-size: 1.2em;
+  }
+  .navbar button, .navbar a {
+    margin-left: 16px;
+  }
+  .navbar a {
+    color: #333;
+    text-decoration: none;
   }
