--- a/src/pages/create/Create.css
+++ b/src/pages/create/Create.css
@@ -20,7 +20,7 @@
   padding: 8px 20px;
   border: 0;
   border-radius: 4px;
-  background-color: #58249c;
+  background-color: #1f9751;
   cursor: pointer;
   text-decoration: none;
   margin: 20px auto;
