--- a/src/pages/create/Create.css
+++ b/src/pages/create/Create.css
@@ -25,3 +25,48 @@
   text-decoration: none;
   margin: 20px auto;
 }
+
+.search-bar-dropdown {
+  width: auto;
+  position: relative;
+}
+
+#results {
+  position: absolute;
+  top: 90px;
+  width: inherit;
+  overflow-y: scroll;
+  /* height: 20em; */
+  background-color: #fafafa;
+}
+
+#results > button {
+  background-color: #fafafa;
+  color: #1f9751
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background-color: #eeeeee;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 10px;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+#search-bar {
+  width: inherit;
+}
